Enable installed rules to be used in detection
This adds files in the example installed license that can be used in
license detection. It also adds a test to be run as part of a CI job.

Signed-off-by: Kevin Ji <kyji1011@gmail.com>

--- a/tests/licensedcode/data/example_external_licenses/licenses_to_install1/src/licenses_to_install1/licenses/example-installed-1.yml
+++ b/tests/licensedcode/data/example_external_licenses/licenses_to_install1/src/licenses_to_install1/licenses/example-installed-1.yml
@@ -1,4 +1,4 @@
-key: exampleInstalled1
+key: example-installed-1
 short_name: Example Installed License 1
 name: Example Installed License 1
 category: Permissive
