Add feature to get package license from sibling file
Adds license detection and expressions from a sibling License/Readme
file if there is no license detected from the package manifest itself.

Signed-off-by: Ayan Sinha Mahapatra <ayansmahapatra@gmail.com>

--- a/setup.cfg
+++ b/setup.cfg
@@ -159,7 +159,7 @@ console_scripts =
 scancode_pre_scan =
     ignore = scancode.plugin_ignore:ProcessIgnore
     facet = summarycode.facet:AddFacet
-    classify = summarycode.classify:FileClassifier
+    classify = summarycode.classify_plugin:FileClassifier
 
 
 # scancode_scan is the entry point for scan plugins that run a scan after the
