Clarify `unknown` license keys #2827
Update the notes for license data files with `unknown` license
keys with text authored by @DennisClark. See also:
https://github.com/nexB/scancode-toolkit/issues/3021

Reference: https://github.com/nexB/scancode-toolkit/issues/2827
Signed-off-by: Ayan Sinha Mahapatra <ayansmahapatra@gmail.com>

--- a/src/licensedcode/data/licenses/free-unknown.yml
+++ b/src/licensedcode/data/licenses/free-unknown.yml
@@ -5,4 +5,5 @@ category: Unstated License
 owner: Unspecified
 is_unknown: yes
 spdx_license_key: LicenseRef-scancode-free-unknown
-
+notes: This case applies to software with a notice that refers in a non-specific manner to a
+  free or open-source license, but where it is not possible to determine that specific license.
