--- a/src/licensedcode/data/licenses/unknown-license-reference.yml
+++ b/src/licensedcode/data/licenses/unknown-license-reference.yml
@@ -4,6 +4,7 @@ name: Unknown License file reference
 category: Unstated License
 owner: Unspecified
 is_unknown: yes
-notes: This is reference to a license file with no clear license. this was known before as "see-license"
-    and "license-file-reference"
 spdx_license_key: LicenseRef-scancode-unknown-license-reference
+notes: This applies to the case of a file with no clear license, which may be referenced
+    via URL or text such as "See license in..." or "This file is licensed under...",
+    but where the reference cannot be resolved to a specific named, public license.
