--- a/src/licensedcode/data/licenses/unknown.yml
+++ b/src/licensedcode/data/licenses/unknown.yml
@@ -5,4 +5,5 @@ category: Unstated License
 owner: Unspecified
 is_unknown: yes
 spdx_license_key: LicenseRef-scancode-unknown
-notes: This is something that clearly ressembles a license but is not conclusive.
+notes: This applies to the case where there is text referring to a license, but it is not
+  possible to determine exactly which license.
