--- a/tests/packagedcode/data/debian/copyright/debian-slim-2021-04-07/usr/share/doc/libhogweed6/copyright-detailed.expected.yml
+++ b/tests/packagedcode/data/debian/copyright/debian-slim-2021-04-07/usr/share/doc/libhogweed6/copyright-detailed.expected.yml
@@ -73,35 +73,7 @@ declared_license:
   - Expat
 license_expression: ((lgpl-3.0-plus AND lgpl-3.0-plus) OR (gpl-2.0-plus AND gpl-2.0-plus)) AND
   (((gpl-2.0-plus OR gpl-3.0-plus) AND other-permissive AND public-domain) AND public-domain
-  AND lgpl-2.0-plus AND mit AND pycrypto AND public-domain AND public-domain AND lgpl-2.1-plus
-  AND public-domain AND lgpl-2.1-plus AND public-domain AND lgpl-2.0-plus) AND ((lgpl-3.0-plus
-  AND lgpl-3.0-plus) OR (gpl-2.0-plus AND gpl-2.0-plus)) AND ((lgpl-3.0-plus AND lgpl-3.0-plus)
-  OR (gpl-2.0-plus AND gpl-2.0-plus)) AND ((lgpl-3.0-plus AND lgpl-3.0-plus) OR (gpl-2.0-plus
-  AND gpl-2.0-plus)) AND ((lgpl-3.0-plus AND lgpl-3.0-plus) OR (gpl-2.0-plus AND gpl-2.0-plus))
-  AND ((lgpl-3.0-plus AND lgpl-3.0-plus) OR (gpl-2.0-plus AND gpl-2.0-plus)) AND ((lgpl-3.0-plus
-  AND lgpl-3.0-plus) OR (gpl-2.0-plus AND gpl-2.0-plus)) AND ((lgpl-3.0-plus AND lgpl-3.0-plus)
-  OR (gpl-2.0-plus AND gpl-2.0-plus)) AND ((lgpl-3.0-plus AND lgpl-3.0-plus) OR (gpl-2.0-plus
-  AND gpl-2.0-plus)) AND ((lgpl-3.0-plus AND lgpl-3.0-plus) OR (gpl-2.0-plus AND gpl-2.0-plus))
-  AND ((lgpl-3.0-plus AND lgpl-3.0-plus) OR (gpl-2.0-plus AND gpl-2.0-plus)) AND ((lgpl-3.0-plus
-  AND lgpl-3.0-plus) OR (gpl-2.0-plus AND gpl-2.0-plus)) AND ((lgpl-3.0-plus AND lgpl-3.0-plus)
-  OR (gpl-2.0-plus AND gpl-2.0-plus)) AND ((lgpl-3.0-plus AND lgpl-3.0-plus) OR (gpl-2.0-plus
-  AND gpl-2.0-plus)) AND ((lgpl-3.0-plus AND lgpl-3.0-plus) OR (gpl-2.0-plus AND gpl-2.0-plus))
-  AND ((lgpl-3.0-plus AND lgpl-3.0-plus) OR (gpl-2.0-plus AND gpl-2.0-plus)) AND ((lgpl-3.0-plus
-  AND lgpl-3.0-plus) OR (gpl-2.0-plus AND gpl-2.0-plus)) AND ((lgpl-3.0-plus AND lgpl-3.0-plus)
-  OR (gpl-2.0-plus AND gpl-2.0-plus)) AND ((lgpl-3.0-plus AND lgpl-3.0-plus) OR (gpl-2.0-plus
-  AND gpl-2.0-plus)) AND ((lgpl-3.0-plus AND lgpl-3.0-plus) OR (gpl-2.0-plus AND gpl-2.0-plus))
-  AND ((lgpl-3.0-plus AND lgpl-3.0-plus) OR (gpl-2.0-plus AND gpl-2.0-plus)) AND ((lgpl-3.0-plus
-  AND lgpl-3.0-plus) OR (gpl-2.0-plus AND gpl-2.0-plus)) AND ((lgpl-3.0-plus AND lgpl-3.0-plus)
-  OR (gpl-2.0-plus AND gpl-2.0-plus)) AND (lgpl-2.0-plus AND lgpl-2.0-plus) AND ((lgpl-3.0-plus
-  AND lgpl-3.0-plus) OR (gpl-2.0-plus AND gpl-2.0-plus)) AND ((lgpl-3.0-plus AND lgpl-3.0-plus)
-  OR (gpl-2.0-plus AND gpl-2.0-plus)) AND ((lgpl-3.0-plus AND lgpl-3.0-plus) OR (gpl-2.0-plus
-  AND gpl-2.0-plus)) AND ((lgpl-3.0-plus AND lgpl-3.0-plus) OR (gpl-2.0-plus AND gpl-2.0-plus))
-  AND ((lgpl-3.0-plus AND lgpl-3.0-plus) OR (gpl-2.0-plus AND gpl-2.0-plus)) AND ((lgpl-3.0-plus
-  AND lgpl-3.0-plus) OR (gpl-2.0-plus AND gpl-2.0-plus)) AND ((lgpl-3.0-plus AND lgpl-3.0-plus)
-  OR (gpl-2.0-plus AND gpl-2.0-plus)) AND mit AND ((lgpl-3.0-plus AND lgpl-3.0-plus) OR (gpl-2.0-plus
-  AND gpl-2.0-plus)) AND ((lgpl-3.0-plus AND lgpl-3.0-plus) OR (gpl-2.0-plus AND gpl-2.0-plus))
-  AND ((lgpl-3.0-plus AND lgpl-3.0-plus) OR (gpl-2.0-plus AND gpl-2.0-plus)) AND ((lgpl-3.0-plus
-  AND lgpl-3.0-plus) OR (gpl-2.0-plus AND gpl-2.0-plus)) AND ((lgpl-3.0-plus AND lgpl-3.0-plus)
+  AND lgpl-2.0-plus AND mit AND pycrypto AND lgpl-2.1-plus) AND ((lgpl-3.0-plus AND lgpl-3.0-plus)
   OR (gpl-2.0-plus AND gpl-2.0-plus)) AND ((lgpl-3.0-plus AND lgpl-3.0-plus) OR (gpl-2.0-plus
   AND gpl-2.0-plus)) AND ((lgpl-3.0-plus AND lgpl-3.0-plus) OR (gpl-2.0-plus AND gpl-2.0-plus))
   AND ((lgpl-3.0-plus AND lgpl-3.0-plus) OR (gpl-2.0-plus AND gpl-2.0-plus)) AND ((lgpl-3.0-plus
@@ -119,18 +91,73 @@ license_expression: ((lgpl-3.0-plus AND lgpl-3.0-plus) OR (gpl-2.0-plus AND gpl-
   AND ((lgpl-3.0-plus AND lgpl-3.0-plus) OR (gpl-2.0-plus AND gpl-2.0-plus)) AND ((lgpl-3.0-plus
   AND lgpl-3.0-plus) OR (gpl-2.0-plus AND gpl-2.0-plus)) AND ((lgpl-3.0-plus AND lgpl-3.0-plus)
   OR (gpl-2.0-plus AND gpl-2.0-plus)) AND ((lgpl-3.0-plus AND lgpl-3.0-plus) OR (gpl-2.0-plus
+  AND gpl-2.0-plus)) AND (lgpl-2.0-plus AND lgpl-2.0-plus) AND ((lgpl-3.0-plus AND lgpl-3.0-plus)
+  OR (gpl-2.0-plus AND gpl-2.0-plus)) AND ((lgpl-3.0-plus AND lgpl-3.0-plus) OR (gpl-2.0-plus
   AND gpl-2.0-plus)) AND ((lgpl-3.0-plus AND lgpl-3.0-plus) OR (gpl-2.0-plus AND gpl-2.0-plus))
-  AND ((lgpl-3.0-plus AND lgpl-3.0-plus) OR (gpl-2.0-plus AND gpl-2.0-plus)) AND (gpl-3.0-plus
-  AND gpl-3.0-plus WITH tex-exception) AND ((lgpl-3.0-plus AND lgpl-3.0-plus) OR (gpl-2.0-plus
+  AND ((lgpl-3.0-plus AND lgpl-3.0-plus) OR (gpl-2.0-plus AND gpl-2.0-plus)) AND ((lgpl-3.0-plus
+  AND lgpl-3.0-plus) OR (gpl-2.0-plus AND gpl-2.0-plus)) AND ((lgpl-3.0-plus AND lgpl-3.0-plus)
+  OR (gpl-2.0-plus AND gpl-2.0-plus)) AND ((lgpl-3.0-plus AND lgpl-3.0-plus) OR (gpl-2.0-plus
+  AND gpl-2.0-plus)) AND mit AND ((lgpl-3.0-plus AND lgpl-3.0-plus) OR (gpl-2.0-plus AND gpl-2.0-plus))
+  AND ((lgpl-3.0-plus AND lgpl-3.0-plus) OR (gpl-2.0-plus AND gpl-2.0-plus)) AND ((lgpl-3.0-plus
+  AND lgpl-3.0-plus) OR (gpl-2.0-plus AND gpl-2.0-plus)) AND ((lgpl-3.0-plus AND lgpl-3.0-plus)
+  OR (gpl-2.0-plus AND gpl-2.0-plus)) AND ((lgpl-3.0-plus AND lgpl-3.0-plus) OR (gpl-2.0-plus
   AND gpl-2.0-plus)) AND ((lgpl-3.0-plus AND lgpl-3.0-plus) OR (gpl-2.0-plus AND gpl-2.0-plus))
-  AND (gpl-2.0-plus AND gpl-2.0-plus) AND autoconf-simple-exception-2.0 AND public-domain AND
-  (gpl-2.0 AND gpl-2.0) AND fsf-ap
+  AND ((lgpl-3.0-plus AND lgpl-3.0-plus) OR (gpl-2.0-plus AND gpl-2.0-plus)) AND ((lgpl-3.0-plus
+  AND lgpl-3.0-plus) OR (gpl-2.0-plus AND gpl-2.0-plus)) AND ((lgpl-3.0-plus AND lgpl-3.0-plus)
+  OR (gpl-2.0-plus AND gpl-2.0-plus)) AND ((lgpl-3.0-plus AND lgpl-3.0-plus) OR (gpl-2.0-plus
+  AND gpl-2.0-plus)) AND ((lgpl-3.0-plus AND lgpl-3.0-plus) OR (gpl-2.0-plus AND gpl-2.0-plus))
+  AND ((lgpl-3.0-plus AND lgpl-3.0-plus) OR (gpl-2.0-plus AND gpl-2.0-plus)) AND ((lgpl-3.0-plus
+  AND lgpl-3.0-plus) OR (gpl-2.0-plus AND gpl-2.0-plus)) AND ((lgpl-3.0-plus AND lgpl-3.0-plus)
+  OR (gpl-2.0-plus AND gpl-2.0-plus)) AND ((lgpl-3.0-plus AND lgpl-3.0-plus) OR (gpl-2.0-plus
+  AND gpl-2.0-plus)) AND ((lgpl-3.0-plus AND lgpl-3.0-plus) OR (gpl-2.0-plus AND gpl-2.0-plus))
+  AND ((lgpl-3.0-plus AND lgpl-3.0-plus) OR (gpl-2.0-plus AND gpl-2.0-plus)) AND ((lgpl-3.0-plus
+  AND lgpl-3.0-plus) OR (gpl-2.0-plus AND gpl-2.0-plus)) AND ((lgpl-3.0-plus AND lgpl-3.0-plus)
+  OR (gpl-2.0-plus AND gpl-2.0-plus)) AND ((lgpl-3.0-plus AND lgpl-3.0-plus) OR (gpl-2.0-plus
+  AND gpl-2.0-plus)) AND ((lgpl-3.0-plus AND lgpl-3.0-plus) OR (gpl-2.0-plus AND gpl-2.0-plus))
+  AND ((lgpl-3.0-plus AND lgpl-3.0-plus) OR (gpl-2.0-plus AND gpl-2.0-plus)) AND ((lgpl-3.0-plus
+  AND lgpl-3.0-plus) OR (gpl-2.0-plus AND gpl-2.0-plus)) AND ((lgpl-3.0-plus AND lgpl-3.0-plus)
+  OR (gpl-2.0-plus AND gpl-2.0-plus)) AND ((lgpl-3.0-plus AND lgpl-3.0-plus) OR (gpl-2.0-plus
+  AND gpl-2.0-plus)) AND ((lgpl-3.0-plus AND lgpl-3.0-plus) OR (gpl-2.0-plus AND gpl-2.0-plus))
+  AND ((lgpl-3.0-plus AND lgpl-3.0-plus) OR (gpl-2.0-plus AND gpl-2.0-plus)) AND ((lgpl-3.0-plus
+  AND lgpl-3.0-plus) OR (gpl-2.0-plus AND gpl-2.0-plus)) AND (gpl-3.0-plus AND gpl-3.0-plus
+  WITH tex-exception) AND ((lgpl-3.0-plus AND lgpl-3.0-plus) OR (gpl-2.0-plus AND gpl-2.0-plus))
+  AND ((lgpl-3.0-plus AND lgpl-3.0-plus) OR (gpl-2.0-plus AND gpl-2.0-plus)) AND (gpl-2.0-plus
+  AND gpl-2.0-plus) AND autoconf-simple-exception-2.0 AND public-domain AND (gpl-2.0 AND gpl-2.0)
+  AND fsf-ap
 declared_license_expression_spdx: ((LGPL-3.0-or-later AND LGPL-3.0-or-later) OR (GPL-2.0-or-later
   AND GPL-2.0-or-later)) AND (((GPL-2.0-or-later OR GPL-3.0-or-later) AND LicenseRef-scancode-other-permissive
   AND LicenseRef-scancode-public-domain) AND LicenseRef-scancode-public-domain AND LGPL-2.0-or-later
-  AND MIT AND LicenseRef-scancode-pycrypto AND LicenseRef-scancode-public-domain AND LicenseRef-scancode-public-domain
-  AND LGPL-2.1-or-later AND LicenseRef-scancode-public-domain AND LGPL-2.1-or-later AND LicenseRef-scancode-public-domain
-  AND LGPL-2.0-or-later) AND ((LGPL-3.0-or-later AND LGPL-3.0-or-later) OR (GPL-2.0-or-later
+  AND MIT AND LicenseRef-scancode-pycrypto AND LGPL-2.1-or-later) AND ((LGPL-3.0-or-later AND
+  LGPL-3.0-or-later) OR (GPL-2.0-or-later AND GPL-2.0-or-later)) AND ((LGPL-3.0-or-later AND
+  LGPL-3.0-or-later) OR (GPL-2.0-or-later AND GPL-2.0-or-later)) AND ((LGPL-3.0-or-later AND
+  LGPL-3.0-or-later) OR (GPL-2.0-or-later AND GPL-2.0-or-later)) AND ((LGPL-3.0-or-later AND
+  LGPL-3.0-or-later) OR (GPL-2.0-or-later AND GPL-2.0-or-later)) AND ((LGPL-3.0-or-later AND
+  LGPL-3.0-or-later) OR (GPL-2.0-or-later AND GPL-2.0-or-later)) AND ((LGPL-3.0-or-later AND
+  LGPL-3.0-or-later) OR (GPL-2.0-or-later AND GPL-2.0-or-later)) AND ((LGPL-3.0-or-later AND
+  LGPL-3.0-or-later) OR (GPL-2.0-or-later AND GPL-2.0-or-later)) AND ((LGPL-3.0-or-later AND
+  LGPL-3.0-or-later) OR (GPL-2.0-or-later AND GPL-2.0-or-later)) AND ((LGPL-3.0-or-later AND
+  LGPL-3.0-or-later) OR (GPL-2.0-or-later AND GPL-2.0-or-later)) AND ((LGPL-3.0-or-later AND
+  LGPL-3.0-or-later) OR (GPL-2.0-or-later AND GPL-2.0-or-later)) AND ((LGPL-3.0-or-later AND
+  LGPL-3.0-or-later) OR (GPL-2.0-or-later AND GPL-2.0-or-later)) AND ((LGPL-3.0-or-later AND
+  LGPL-3.0-or-later) OR (GPL-2.0-or-later AND GPL-2.0-or-later)) AND ((LGPL-3.0-or-later AND
+  LGPL-3.0-or-later) OR (GPL-2.0-or-later AND GPL-2.0-or-later)) AND ((LGPL-3.0-or-later AND
+  LGPL-3.0-or-later) OR (GPL-2.0-or-later AND GPL-2.0-or-later)) AND ((LGPL-3.0-or-later AND
+  LGPL-3.0-or-later) OR (GPL-2.0-or-later AND GPL-2.0-or-later)) AND ((LGPL-3.0-or-later AND
+  LGPL-3.0-or-later) OR (GPL-2.0-or-later AND GPL-2.0-or-later)) AND ((LGPL-3.0-or-later AND
+  LGPL-3.0-or-later) OR (GPL-2.0-or-later AND GPL-2.0-or-later)) AND ((LGPL-3.0-or-later AND
+  LGPL-3.0-or-later) OR (GPL-2.0-or-later AND GPL-2.0-or-later)) AND ((LGPL-3.0-or-later AND
+  LGPL-3.0-or-later) OR (GPL-2.0-or-later AND GPL-2.0-or-later)) AND ((LGPL-3.0-or-later AND
+  LGPL-3.0-or-later) OR (GPL-2.0-or-later AND GPL-2.0-or-later)) AND ((LGPL-3.0-or-later AND
+  LGPL-3.0-or-later) OR (GPL-2.0-or-later AND GPL-2.0-or-later)) AND ((LGPL-3.0-or-later AND
+  LGPL-3.0-or-later) OR (GPL-2.0-or-later AND GPL-2.0-or-later)) AND (LGPL-2.0-or-later AND
+  LGPL-2.0-or-later) AND ((LGPL-3.0-or-later AND LGPL-3.0-or-later) OR (GPL-2.0-or-later AND
+  GPL-2.0-or-later)) AND ((LGPL-3.0-or-later AND LGPL-3.0-or-later) OR (GPL-2.0-or-later AND
+  GPL-2.0-or-later)) AND ((LGPL-3.0-or-later AND LGPL-3.0-or-later) OR (GPL-2.0-or-later AND
+  GPL-2.0-or-later)) AND ((LGPL-3.0-or-later AND LGPL-3.0-or-later) OR (GPL-2.0-or-later AND
+  GPL-2.0-or-later)) AND ((LGPL-3.0-or-later AND LGPL-3.0-or-later) OR (GPL-2.0-or-later AND
+  GPL-2.0-or-later)) AND ((LGPL-3.0-or-later AND LGPL-3.0-or-later) OR (GPL-2.0-or-later AND
+  GPL-2.0-or-later)) AND ((LGPL-3.0-or-later AND LGPL-3.0-or-later) OR (GPL-2.0-or-later AND
+  GPL-2.0-or-later)) AND MIT AND ((LGPL-3.0-or-later AND LGPL-3.0-or-later) OR (GPL-2.0-or-later
   AND GPL-2.0-or-later)) AND ((LGPL-3.0-or-later AND LGPL-3.0-or-later) OR (GPL-2.0-or-later
   AND GPL-2.0-or-later)) AND ((LGPL-3.0-or-later AND LGPL-3.0-or-later) OR (GPL-2.0-or-later
   AND GPL-2.0-or-later)) AND ((LGPL-3.0-or-later AND LGPL-3.0-or-later) OR (GPL-2.0-or-later
@@ -152,47 +179,17 @@ declared_license_expression_spdx: ((LGPL-3.0-or-later AND LGPL-3.0-or-later) OR 
   AND GPL-2.0-or-later)) AND ((LGPL-3.0-or-later AND LGPL-3.0-or-later) OR (GPL-2.0-or-later
   AND GPL-2.0-or-later)) AND ((LGPL-3.0-or-later AND LGPL-3.0-or-later) OR (GPL-2.0-or-later
   AND GPL-2.0-or-later)) AND ((LGPL-3.0-or-later AND LGPL-3.0-or-later) OR (GPL-2.0-or-later
-  AND GPL-2.0-or-later)) AND (LGPL-2.0-or-later AND LGPL-2.0-or-later) AND ((LGPL-3.0-or-later
-  AND LGPL-3.0-or-later) OR (GPL-2.0-or-later AND GPL-2.0-or-later)) AND ((LGPL-3.0-or-later
-  AND LGPL-3.0-or-later) OR (GPL-2.0-or-later AND GPL-2.0-or-later)) AND ((LGPL-3.0-or-later
-  AND LGPL-3.0-or-later) OR (GPL-2.0-or-later AND GPL-2.0-or-later)) AND ((LGPL-3.0-or-later
-  AND LGPL-3.0-or-later) OR (GPL-2.0-or-later AND GPL-2.0-or-later)) AND ((LGPL-3.0-or-later
-  AND LGPL-3.0-or-later) OR (GPL-2.0-or-later AND GPL-2.0-or-later)) AND ((LGPL-3.0-or-later
-  AND LGPL-3.0-or-later) OR (GPL-2.0-or-later AND GPL-2.0-or-later)) AND ((LGPL-3.0-or-later
-  AND LGPL-3.0-or-later) OR (GPL-2.0-or-later AND GPL-2.0-or-later)) AND MIT AND ((LGPL-3.0-or-later
-  AND LGPL-3.0-or-later) OR (GPL-2.0-or-later AND GPL-2.0-or-later)) AND ((LGPL-3.0-or-later
-  AND LGPL-3.0-or-later) OR (GPL-2.0-or-later AND GPL-2.0-or-later)) AND ((LGPL-3.0-or-later
-  AND LGPL-3.0-or-later) OR (GPL-2.0-or-later AND GPL-2.0-or-later)) AND ((LGPL-3.0-or-later
-  AND LGPL-3.0-or-later) OR (GPL-2.0-or-later AND GPL-2.0-or-later)) AND ((LGPL-3.0-or-later
-  AND LGPL-3.0-or-later) OR (GPL-2.0-or-later AND GPL-2.0-or-later)) AND ((LGPL-3.0-or-later
-  AND LGPL-3.0-or-later) OR (GPL-2.0-or-later AND GPL-2.0-or-later)) AND ((LGPL-3.0-or-later
-  AND LGPL-3.0-or-later) OR (GPL-2.0-or-later AND GPL-2.0-or-later)) AND ((LGPL-3.0-or-later
-  AND LGPL-3.0-or-later) OR (GPL-2.0-or-later AND GPL-2.0-or-later)) AND ((LGPL-3.0-or-later
-  AND LGPL-3.0-or-later) OR (GPL-2.0-or-later AND GPL-2.0-or-later)) AND ((LGPL-3.0-or-later
-  AND LGPL-3.0-or-later) OR (GPL-2.0-or-later AND GPL-2.0-or-later)) AND ((LGPL-3.0-or-later
-  AND LGPL-3.0-or-later) OR (GPL-2.0-or-later AND GPL-2.0-or-later)) AND ((LGPL-3.0-or-later
-  AND LGPL-3.0-or-later) OR (GPL-2.0-or-later AND GPL-2.0-or-later)) AND ((LGPL-3.0-or-later
-  AND LGPL-3.0-or-later) OR (GPL-2.0-or-later AND GPL-2.0-or-later)) AND ((LGPL-3.0-or-later
-  AND LGPL-3.0-or-later) OR (GPL-2.0-or-later AND GPL-2.0-or-later)) AND ((LGPL-3.0-or-later
-  AND LGPL-3.0-or-later) OR (GPL-2.0-or-later AND GPL-2.0-or-later)) AND ((LGPL-3.0-or-later
-  AND LGPL-3.0-or-later) OR (GPL-2.0-or-later AND GPL-2.0-or-later)) AND ((LGPL-3.0-or-later
-  AND LGPL-3.0-or-later) OR (GPL-2.0-or-later AND GPL-2.0-or-later)) AND ((LGPL-3.0-or-later
-  AND LGPL-3.0-or-later) OR (GPL-2.0-or-later AND GPL-2.0-or-later)) AND ((LGPL-3.0-or-later
-  AND LGPL-3.0-or-later) OR (GPL-2.0-or-later AND GPL-2.0-or-later)) AND ((LGPL-3.0-or-later
-  AND LGPL-3.0-or-later) OR (GPL-2.0-or-later AND GPL-2.0-or-later)) AND ((LGPL-3.0-or-later
-  AND LGPL-3.0-or-later) OR (GPL-2.0-or-later AND GPL-2.0-or-later)) AND ((LGPL-3.0-or-later
-  AND LGPL-3.0-or-later) OR (GPL-2.0-or-later AND GPL-2.0-or-later)) AND ((LGPL-3.0-or-later
-  AND LGPL-3.0-or-later) OR (GPL-2.0-or-later AND GPL-2.0-or-later)) AND ((LGPL-3.0-or-later
-  AND LGPL-3.0-or-later) OR (GPL-2.0-or-later AND GPL-2.0-or-later)) AND ((LGPL-3.0-or-later
-  AND LGPL-3.0-or-later) OR (GPL-2.0-or-later AND GPL-2.0-or-later)) AND ((LGPL-3.0-or-later
-  AND LGPL-3.0-or-later) OR (GPL-2.0-or-later AND GPL-2.0-or-later)) AND ((LGPL-3.0-or-later
-  AND LGPL-3.0-or-later) OR (GPL-2.0-or-later AND GPL-2.0-or-later)) AND ((LGPL-3.0-or-later
-  AND LGPL-3.0-or-later) OR (GPL-2.0-or-later AND GPL-2.0-or-later)) AND (GPL-3.0-or-later AND
-  GPL-3.0-or-later WITH LicenseRef-scancode-tex-exception) AND ((LGPL-3.0-or-later AND LGPL-3.0-or-later)
-  OR (GPL-2.0-or-later AND GPL-2.0-or-later)) AND ((LGPL-3.0-or-later AND LGPL-3.0-or-later)
-  OR (GPL-2.0-or-later AND GPL-2.0-or-later)) AND (GPL-2.0-or-later AND GPL-2.0-or-later) AND
-  LicenseRef-scancode-autoconf-simple-exception-2.0 AND LicenseRef-scancode-public-domain AND
-  (GPL-2.0-only AND GPL-2.0-only) AND FSFAP
+  AND GPL-2.0-or-later)) AND ((LGPL-3.0-or-later AND LGPL-3.0-or-later) OR (GPL-2.0-or-later
+  AND GPL-2.0-or-later)) AND ((LGPL-3.0-or-later AND LGPL-3.0-or-later) OR (GPL-2.0-or-later
+  AND GPL-2.0-or-later)) AND ((LGPL-3.0-or-later AND LGPL-3.0-or-later) OR (GPL-2.0-or-later
+  AND GPL-2.0-or-later)) AND ((LGPL-3.0-or-later AND LGPL-3.0-or-later) OR (GPL-2.0-or-later
+  AND GPL-2.0-or-later)) AND ((LGPL-3.0-or-later AND LGPL-3.0-or-later) OR (GPL-2.0-or-later
+  AND GPL-2.0-or-later)) AND ((LGPL-3.0-or-later AND LGPL-3.0-or-later) OR (GPL-2.0-or-later
+  AND GPL-2.0-or-later)) AND (GPL-3.0-or-later AND GPL-3.0-or-later WITH LicenseRef-scancode-tex-exception)
+  AND ((LGPL-3.0-or-later AND LGPL-3.0-or-later) OR (GPL-2.0-or-later AND GPL-2.0-or-later))
+  AND ((LGPL-3.0-or-later AND LGPL-3.0-or-later) OR (GPL-2.0-or-later AND GPL-2.0-or-later))
+  AND (GPL-2.0-or-later AND GPL-2.0-or-later) AND LicenseRef-scancode-autoconf-simple-exception-2.0
+  AND LicenseRef-scancode-public-domain AND (GPL-2.0-only AND GPL-2.0-only) AND FSFAP
 copyright: |
   © 2001-2020 Niels Möller
   Some parts are Copyright © the Free Software Foundation and various
