Add a docker build and push to ghcr.io #3026
Simplifying deployment/running locally.

Using an existing Github Action that works and has tests. It pushes to the current repo's ghcr.io repository and adds a latest tag. I'm not sure how the project would want to handle other tags, so I've not dived into that (yet).

Signed-off-by: Rob Grant <rob.grant@nanoporetech.com>

--- a/.github/workflows/scancode-release.yml
+++ b/.github/workflows/scancode-release.yml
@@ -19,6 +19,19 @@ on:
 
 jobs:
 
+  build_scancode_for_ghcr:
+    name: Build ScanCode Docker image
+    runs-on: ubuntu-20.04
+
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Build and publish Docker image to ghcr.io/nexB/scancode-toolkit
+        uses: macbre/push-to-ghcr@master
+        with:
+          image_name: ${{ github.repository }}
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+
   build_scancode_for_pypi:
     name: Build ScanCode PyPI archives
     runs-on: ubuntu-20.04
