--- a/src/licensedcode/data/licenses/cncf-corporate-cla-1.0.yml
+++ b/src/licensedcode/data/licenses/cncf-corporate-cla-1.0.yml
@@ -7,4 +7,5 @@ homepage_url: https://github.com/cncf/cla/blob/master/corporate-cla.pdf
 spdx_license_key: LicenseRef-scancode-cncf-corporate-cla-1.0
 faq_url: https://github.com/kubernetes/community/blob/master/CLA.md
 ignorable_emails:
-    - la@cncf.io
+  - cla@cncf.io
+
