Restore release publishing
Signed-off-by: Philippe Ombredanne <pombredanne@nexb.com>

--- a/.github/workflows/scancode-release.yml
+++ b/.github/workflows/scancode-release.yml
@@ -605,15 +605,15 @@ jobs:
           name: windows_app
           path: dist
 
-      - name: Mock GH release
-        run: |
-          ls -al dist
+      #- name: Mock GH release
+      #  run: |
+      #    ls -al dist
 
-      #- name: Create release and publish archives
-      #  uses: softprops/action-gh-release@v1
-      #  with:
-      #    draft: true
-      #    files: dist/*
+      - name: Create release and publish archives
+        uses: softprops/action-gh-release@v1
+        with:
+          draft: true
+          files: dist/*
 
 
   publish_to_pypi:
@@ -643,11 +643,11 @@ jobs:
           name: ${{ matrix.dist_names }}
           path: dist
 
-      - name: Mock PyPI upload
-        run: |
-          ls -al dist
+      #- name: Mock PyPI upload
+      #  run: |
+      #    ls -al dist
 
-      #- name: Publish distributions to PyPI
-      #  uses: pypa/gh-action-pypi-publish@master
-      #  with:
-      #    password: ${{ secrets.PYPI_API_TOKEN }}
+      - name: Publish distributions to PyPI
+        uses: pypa/gh-action-pypi-publish@master
+        with:
+          password: ${{ secrets.PYPI_API_TOKEN }}
